--- a/Preprint/Preprint.qmd
+++ b/Preprint/Preprint.qmd
@@ -1,6 +1,6 @@
 ---
 title: KKT-Informed Neural Network
-subtitle: A Parallel Solver for Parametric Convex Optimization Problem
+subtitle: A Parallel Solver for Parametric Convex Optimization Problems
 author: 
     name: Carmine Delle Femine
     email: cdellefemine@vicomtech.org
@@ -31,16 +31,15 @@ format:
                 \usepackage{amsmath}
                 \usepackage{tikz}
 abstract: |
-  It's presented a neural network-based approach for solving parametric convex optimization problems, where the network estimates the optimal points given a batch of input parameters. The network is trained by penalizing violations of the Karush-Kuhn-Tucker (KKT) conditions, ensuring that its predictions adhere to these optimality criteria. Additionally, since the bounds of the parameter space are known, training batches can be randomly generated without requiring external data. This method trades guaranteed optimality for significant improvements in speed, enabling parallel solving of a class of optimization problems.
+    A neural network-based approach for solving parametric convex optimization problems is presented, where the network estimates the optimal points given a batch of input parameters. The network is trained by penalizing violations of the Karush-Kuhn-Tucker (KKT) conditions, ensuring that its predictions adhere to these optimality criteria. Additionally, since the bounds of the parameter space are known, training batches can be randomly generated without requiring external data. This method trades guaranteed optimality for significant improvements in speed, enabling parallel solving of a class of optimization problems.
 bibliography: bibliography.bib
 ---
 
 # Introduction
 Solving convex optimization problems is essential across numerous fields, including optimal control, logistics, and finance. In many scenarios, such as the development of surrogate models, there is a need to solve a large set of related optimization problems defined by varying parameters. Achieving fast solutions, even at the cost of strict optimality guarantees, is often a priority.
 
-Neural networks, with their inherent ability to process data in parallel and adapt to diverse problem structures, offer a promising solution. In this work, we introduce the KKT-Informed Neural Network (KINN), a method designed to solve parametric convex optimization problems efficiently by integrating the KKT conditions into the network's learning process. By doing so, we enable the rapid, parallel solving of optimization problems while balancing the trade-off between speed and guaranteed optimality.
+Neural networks, with their inherent ability to process data in parallel and adapt to diverse problem structures, offer a promising solution. This work introduces the KKT-Informed Neural Network (KINN), a method designed to solve parametric convex optimization problems efficiently by integrating the KKT conditions into the network's learning process. This approach enables rapid, parallel problem-solving while balancing the trade-off between speed and guaranteed optimality.
 
-# State of the art
 # Background
 
 Consider a parametric convex optimization problem in the standard form:
@@ -70,7 +69,7 @@ Assume differentiable cost and constraints functions and that $g_i$ satisfies Sl
 
 KKT-Informed Neural Network (KINN) builds upon the principles of Physics-Informed Neural Networks (PINNs) [@raissiPhysicsinformedNeuralNetworks2019a], inducing compliance with Karush-Kuhn-Tucker (KKT) through a learning bias, directly coding their violation into the loss function that will be minimized in the training phase.
 
-The network is designed as a multi-layer perceptron (MLP) and processes a batch of $B$ problem parameters $\Theta \in \mathbb{R}^{B \times k}$, $\Theta_i = \theta^{(i)}$. The network outputs $\hat{X}$, $\hat\Lambda$, $\hat{N}$. A ReLU function is placed at the end of the branch predicting $\hat\Lambda$ to ensure its feasability.
+The network is designed as a multi-layer perceptron (MLP) and processes a batch of $B$ problem parameters $\Theta \in \mathbb{R}^{B \times k}$, $\Theta_i = \theta^{(i)}$. The network outputs $\hat{X}$, $\hat\Lambda$, $\hat{N}$. A ReLU function is applied to the branch predicting $\hat\Lambda$ to ensure its feasibility.
 
 ```{=tex}
 \begin{align}
@@ -86,14 +85,14 @@ Vector-valued loss function consists of four terms that correspond to each KKT c
 
 
 \begin{equation}
-\mathcal{L} = \frac{1}{B}\biggl(\sum_{i=1}^B\mathcal{L}_{S}^{(i)}, \sum_{i=1}^B\mathcal{L}_{I}^{(i)}, \sum_{i=1}^B\mathcal{L}_{E}^{(i)}, \sum_{i=1}^B\mathcal{L}_{C}^{(i)}\biggl) 
+\mathcal{L} = \frac{1}{B}\biggr[\sum_{i=1}^B\mathcal{L}_{S}^{(i)}, \sum_{i=1}^B\mathcal{L}_{I}^{(i)}, \sum_{i=1}^B\mathcal{L}_{E}^{(i)}, \sum_{i=1}^B\mathcal{L}_{C}^{(i)}\biggr] 
 \end{equation}
 
 where:
 
 ```{=tex}
 \begin{align}
-    \mathcal{L}_{S} =& \|\nabla_{\hat{x}^{(i)}} f(\hat{x}^{(i)}, \theta^{(i)}) + \sum\nolimits_{j=1}^m \hat{\lambda}^{(i)}_j\nabla_{\hat{x}^{(i)}} g_j(\hat{x}^{(i)}, \theta^{(i)}) + A(\theta^{(i)})^T\hat{\nu}^{(i)}\|_2\\ 
+    \mathcal{L}_{S}^{(i)} =& \|\nabla_{\hat{x}^{(i)}} f(\hat{x}^{(i)}, \theta^{(i)}) + \sum\nolimits_{j=1}^m \hat{\lambda}^{(i)}_j\nabla_{\hat{x}^{(i)}} g_j(\hat{x}^{(i)}, \theta^{(i)}) + A(\theta^{(i)})^T\hat{\nu}^{(i)}\|_2\\ 
     \mathcal{L}_{I}^{(i)}  =& \|(\max(0, g_1(\hat{x}^{(i)}, \theta^{(i)})),\dots,\max(0, g_m(\hat{x}^{(i)}, \theta^{(i)})))\|_2\\
     \mathcal{L}_{E}^{(i)} =& \|A(\theta^{(i)}) \hat{x}^{(i)} - b(\theta^{(i)})\|_2\\
     \mathcal{L}_{C}^{(i)}  =& \|(\hat{\lambda}_1^{(i)} g_1(\hat{x}^{(i)}, \theta^{(i)}),\dots,\hat{\lambda}_m^{(i)} g_m(\hat{x}^{(i)}, \theta^{(i)}))\|_2\\
@@ -103,10 +102,10 @@ where:
 This vector-valued loss function is minimized through a Jacobian descent [@quintonJacobianDescentMultiObjective2024a]. Let $\mathcal{J} \in \mathbb{R}^{P\times4}$ the Jacobian matrix of $\mathcal{L}$, with $P$ the number of parameters of the KINN, $\mathcal{A}: \mathbb{R}^{P\times4} \to \mathbb{R}^{P}$ is called aggregator. The "direction" of the update of networks parameters will be $\mathcal{A}(\mathcal{J})$. The aggregator chosen is $\mathcal{A}_{\mathrm{UPGrad}}$, described in [@quintonJacobianDescentMultiObjective2024a]. 
 
 # Case study
-We consider a renewable energy generator in a power grid as a test case for this approach. The generator's active and reactive power injections $(P,Q)$ are controllable, but they must adhere to physical constraints. As such, the desired setpoints $(a_P, a_Q)$ must be projected onto the feasible set defined by these constraints. This problem is taken from [@henryGymANMReinforcementLearning2021].
+A renewable energy generator in a power grid is used as a test case for this approach.. The generator's active and reactive power injections $(P,Q)$ are controllable, but they must adhere to physical constraints. As such, the desired setpoints $(a_P, a_Q)$ must be projected onto the feasible set defined by these constraints. This problem is taken from [@henryGymANMReinforcementLearning2021].
 
 ## Problem description
-
+The feasible set $\mathcal{D}$ (shown in [\ref{fig-set}]) is defined by the physical parameters of the generator $\overline{P}_g \in \mathbb{R}_0⁺$, $P⁺_g \in ]0, \overline{P}_g]$, $\overline{Q}_g \in \mathbb{R}_0⁺$, $Q⁺_g \in ]0, \overline{Q}_g]$, characterizing the minimum and maximum possible values and the relationships between active and reactive power, and the dynamic value $P^{\textrm{(max)}}_{g,t}$ which indicates the maximum power that can be generated at that time given the external conditions (e.g. wind speed, solar radiation, etc.):
 \begin{equation}
 \mathcal{D} = \{(P, Q) \in \mathbb{R}² | 0 \leq P \leq P^{\textrm{(max)}}_{g,t}, -\overline{Q}_g \leq Q \leq \overline{Q}_g, Q \leq \tau^{(1)}_g P + \rho_g^{(1)}, Q \geq \tau^{(2)}_g P + \rho_g^{(2)}\}
 \end{equation}
@@ -171,8 +170,6 @@ where:
 \caption{Feasibile set $\mathcal{D}$} \label{fig-set}
 \end{figure}
 ```
-
-The feasible set $\mathcal{D}$ (shown in [\ref{fig-set}]) is defined by the physical parameters of the generator $\overline{P}_g \in \mathbb{R}_0⁺$, $P⁺_g \in ]0, \overline{P}_g]$, $\overline{Q}_g \in \mathbb{R}_0⁺$, $Q⁺_g \in ]0, \overline{Q}_g]$, characterizing the minimum and maximum possible values and the relationships between active and reactive power, and the dynamic value $P^{\textrm{(max)}}_{g,t}$ which indicates the maximum power that can be generated at that time given the external conditions (e.g. wind speed, solar radiation, etc.):
 
 
 The problem could be stated in standard form as:
@@ -281,9 +278,10 @@ compl = pd.read_csv("plots/compl.csv")
 ineq = pd.read_csv("plots/ineq.csv")
 #plt.yscale("log")
 #.ewm(alpha=2 / 3).mean())
-plt.plot(stat['Step'], stat['Value'])
-plt.plot(compl['Step'], compl['Value'])
-plt.plot(ineq['Step'], ineq['Value'])
+plt.plot(stat['Step'], stat['Value'], label = "$L_S$")
+plt.plot(compl['Step'], compl['Value'], label = "$L_C$")
+plt.plot(ineq['Step'], ineq['Value'], label = "$L_I$")
+plt.legend(["$\\mathcal{L}_S$", "$\\mathcal{L}_C$", "$\\mathcal{L}_I$"], loc="upper center")
 plt.tight_layout()
 plt.xlabel("Step")
 plt.ylabel("MAE")
@@ -348,7 +346,7 @@ plt.show()
 ```{python}
 #| label: fig-times
 #| echo: false
-#| fig-cap: "Computation time compariso"
+#| fig-cap: "Computation time comparison"
 import pandas as pd
 import matplotlib.pyplot as plt
 import seaborn as sns
@@ -368,11 +366,8 @@ plt.show()
 ```
 # Conclusions
 
-KKT-Informed Neural Network (KINN) was introduced, a neural network-based approach for solving parametric convex optimization problems. The method leverages the Karush-Kuhn-Tucker (KKT) conditions as a learning bias, integrating them into the loss function to ensure that the network’s predictions adhere to the necessary optimality criteria. This allows the network to efficiently estimate solutions while sacrificing some degree of guaranteed optimality in favor of significant improvements in computational speed and scalability.
+KKT-Informed Neural Network (KINN) was introduced as a neural network-based approach for solving parametric convex optimization problems. The method leverages the Karush-Kuhn-Tucker (KKT) conditions as a learning bias, integrating them into the loss function to ensure that the network’s predictions adhere to the necessary optimality criteria. This allows the network to efficiently estimate solutions while sacrificing some degree of guaranteed optimality in favor of significant improvements in computational speed and scalability.
 
 The experimental results from the provided test case demonstrated that KINN is highly effective in providing near-optimal solutions while enabling parallel problem-solving. The comparison with traditional tools, highlighted KINN's ability to solve optimization problems in a fraction of the time, with minimal loss of accuracy. Metrics such as mean absolute error (MAE) and $R^2$ confirm that KINN produces reliable solutions within acceptable tolerances for real-world applications. Although some optimality is traded for speed, KINN provides a highly practical tool for scenarios where rapid decision-making is critical.
 
 In future work, the potential for expanding this approach to handle non-convex optimization problems will be explored. Additionally, hybrid architectures that combine KINN with traditional optimization methods may offer further improvements in performance, providing a balance between speed and guaranteed optimality across a broader range of problem domains.
-# References{.unnumbered}
-
-::: {#refs}
