--- a/MPC/mpc.ipynb
+++ b/MPC/mpc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.009970348984377875"
+       "0.04404471390953668"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +76,12 @@
     "\tpen = 0.3*np.random.rand() + 0.1\n",
     "\ta=0.4*np.random.rand() + 0.6\n",
     "\tb=0.2*np.random.rand() +0.1\n",
-    "\tt= 0.4*np.random.rand() + 0.1\n",
-    "\tt_ref = 0.4*np.array([np.random.rand()]*(n)) + 0.6\n",
-    "\n",
+    "\tt= np.random.rand()\n",
+    "\tt_ref = np.array([np.random.rand()]*(n))\n",
+    "\t\n",
+    "\tpen = 0.1\n",
+    "\ta = 0.9\n",
+    "\tb = 0.1\n",
     "\tQ = np.identity(n)\n",
     "\tL = pen * np.identity(n)\n",
     "\tI = np.identity(n)\n",
@@ -89,13 +92,13 @@
     "\tconstraints = [x <= np.ones(n), -x <= np.zeros(n), (A*t +B@x) <= np.ones(n), -(A*t +B@x) <= np.zeros(n)]\n",
     "\tprob = cp.Problem(cp.Minimize(cp.quad_form(A*t +B@x - t_ref, I) + cp.quad_form(x, L)), constraints)\n",
     "\tprob.solve()\n",
-    "\tif prob.status == 'optimal': ds.append((np.array([t, t_ref[0],a ,b, pen]), x.value))\n",
+    "\tif prob.status == 'optimal': ds.append((np.array([t, t_ref[0]]), x.value))\n",
     "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +107,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.        , 1.        , 0.84343339, 0.44372603])"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,21 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([ 2.1016e-01,  1.8768e-01,  1.5076e-01,  9.2640e-02, -1.3264e-09],\n",
+       "(tensor([ 7.3858e-02,  8.8787e-02,  1.0222e-01,  7.9871e-02, -1.3224e-09],\n",
        "        dtype=torch.float64),\n",
-       " tensor(0.1106, dtype=torch.float64),\n",
+       " tensor(0.0241, dtype=torch.float64),\n",
        " tensor(0., dtype=torch.float64),\n",
        " tensor(0., dtype=torch.float64),\n",
-       " tensor(2.6529e-07, dtype=torch.float64))"
+       " tensor(0.0057, dtype=torch.float64))"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +313,7 @@
        "tensor([0., 0., 0., 0., 0.], dtype=torch.float64)"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1.0000, 0.9305, 0.8243, 0.6622, 0.4069], dtype=torch.float64)"
+       "tensor([1.0000, 1.0000, 1.0000, 0.8434, 0.4437], dtype=torch.float64)"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,17 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([2.0998e-01, 1.8768e-01, 1.5076e-01, 9.2640e-02, 2.7756e-17],\n",
-       "       dtype=torch.float64)"
+       "tensor([0.0510, 0.0752, 0.0973, 0.0799, 0.0000], dtype=torch.float64)"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,16 +364,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1646234299501639"
+       "0.1"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +393,7 @@
        "tensor(1., dtype=torch.float64)"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,16 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.3019, dtype=torch.float64)"
+       "tensor(0.2536, dtype=torch.float64)"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,16 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8849300074796036"
+       "0.8842666862880384"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
