--- a/Preprint/Preprint.tex
+++ b/Preprint/Preprint.tex
@@ -79,6 +79,8 @@
 \makeatother
 
 \usepackage{amsmath}
+\usepackage{tikz}
+\usepackage{xcolor}
 \usepackage{arxiv}
 \usepackage{orcidlink}
 \usepackage{amsmath}
