--- a/CQP/cqp.ipynb
+++ b/CQP/cqp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1075,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1076,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n=15\n",
-    "m=10\n",
-    "p=5"
+    "n=4\n",
+    "m=2\n",
+    "p=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1077,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,80 +36,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1078,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q = np.random.rand(n, n)\n",
-    "Q = np.dot(Q.transpose(), Q)\n",
-    "\n",
-    "#Q = Q/(np.max(Q))"
+    "A_q = np.random.rand(n, n)\n",
+    "Q = np.dot(A_q.T, A_q) + n * np.eye(n) \n",
+    "c = np.random.uniform(-1, 1, n)\n",
+    "bounds = [(-1, 1) for _ in range(n)]\n",
+    "x_feasible = np.random.uniform(-0.9, 0.9, n)\n",
+    "A = np.random.uniform(-1, 1, (m, n))\n",
+    "G = np.random.uniform(-1, 1, (p, n))\n",
+    "h = np.dot(G, x_feasible)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1079,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = np.random.rand(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1080,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = np.random.rand(m, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1081,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h = G@np.random.rand(n) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1082,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.random.rand(p, n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1083,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = np.random.rand(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1108,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(1):\n",
-    "\tc = np.random.rand(n)\n",
+    "\t\n",
+    "\tb = np.dot(A, x_feasible) + np.random.uniform(0.1, 1.0, m)\n",
+    "\t\n",
+    "\t\n",
     "\tx = cp.Variable(n)\n",
-    "\tconstraints = [G@x <= h, np.identity(n)@x <= np.ones(n), np.identity(n)@x >= -np.ones(n)]\n",
+    "\tconstraints = [A@x <= b, G@x == h,np.identity(n)@x <= np.ones(n), np.identity(n)@x >= -np.ones(n)]\n",
     "\tprob = cp.Problem(cp.Minimize(0.5*cp.quad_form(x, Q) + c.T@x), constraints)\n",
     "\tprob.solve()\n",
-    "\tif prob.status == 'optimal': ds.append((np.array([t, t_ref[0]]), x.value))\n",
+    "\tif prob.status == 'optimal': ds.append((b, x.value))\n",
     "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1109,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.72142756, -0.55637699,  0.88379704, -0.67737616],\n",
+       "       [-0.94878079,  0.76248755,  0.57293348, -0.67290018]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([-0.22633813, -0.47023235]),\n",
+       "  array([ 0.08489935, -0.28807553, -0.4175564 ,  0.24623117]))]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +122,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 1109,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,18 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1110,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.22814352, -0.13563488, -1.        ,  0.3357851 ,  0.15605192,\n",
-       "        1.        , -0.63948062, -0.84205632,  0.58062985,  0.73878819,\n",
-       "       -0.08983333,  0.08157517, -1.        , -0.94619556,  1.        ])"
+       "array([-0.1723105 , -0.17500188,  0.82002068,  0.04322235])"
       ]
      },
-     "execution_count": 1110,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1111,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
