--- a/MPC/mpc.ipynb
+++ b/MPC/mpc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n=5"
+    "n=2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.04404471390953668"
+       "0.35003798899795724"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "\tpen = 0.3*np.random.rand() + 0.1\n",
     "\ta=0.4*np.random.rand() + 0.6\n",
     "\tb=0.2*np.random.rand() +0.1\n",
-    "\tt= np.random.rand()\n",
+    "\tt=  np.random.rand()\n",
     "\tt_ref = np.array([np.random.rand()]*(n))\n",
     "\t\n",
     "\tpen = 0.1\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.        , 1.        , 1.        , 0.84343339, 0.44372603])"
+       "array([0.90158611, 0.45815512])"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,21 +264,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([ 7.3858e-02,  8.8787e-02,  1.0222e-01,  7.9871e-02, -1.3224e-09],\n",
-       "        dtype=torch.float64),\n",
-       " tensor(0.0241, dtype=torch.float64),\n",
+       "(tensor([0.1327, 0.1157], dtype=torch.float64),\n",
+       " tensor(0.1902, dtype=torch.float64),\n",
+       " tensor(4.4281e-46, dtype=torch.float64),\n",
        " tensor(0., dtype=torch.float64),\n",
-       " tensor(0., dtype=torch.float64),\n",
-       " tensor(0.0057, dtype=torch.float64))"
+       " tensor(1.4362e-47, dtype=torch.float64))"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0., 0., 0., 0., 0.], dtype=torch.float64)"
+       "tensor([0.2369, 0.1157], dtype=torch.float64)"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,16 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1.0000, 1.0000, 1.0000, 0.8434, 0.4437], dtype=torch.float64)"
+       "tensor([-1.4049e-23, -1.5667e-23], dtype=torch.float64)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0510, 0.0752, 0.0973, 0.0799, 0.0000], dtype=torch.float64)"
+       "tensor([0.1327, 0.1157], dtype=torch.float64)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +372,7 @@
        "0.1"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1., dtype=torch.float64)"
+       "tensor(-1.4049e-23, dtype=torch.float64)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,16 +410,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.2536, dtype=torch.float64)"
+       "tensor(0.8474, dtype=torch.float64)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,16 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8842666862880384"
+       "0.1839191964333159"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
