--- a/MPC/mpc.ipynb
+++ b/MPC/mpc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.35003798899795724"
+       "0.9975527572444604"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,10 +78,7 @@
     "\tb=0.2*np.random.rand() +0.1\n",
     "\tt=  np.random.rand()\n",
     "\tt_ref = np.array([np.random.rand()]*(n))\n",
-    "\t\n",
-    "\tpen = 0.1\n",
-    "\ta = 0.9\n",
-    "\tb = 0.1\n",
+    "\n",
     "\tQ = np.identity(n)\n",
     "\tL = pen * np.identity(n)\n",
     "\tI = np.identity(n)\n",
@@ -98,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +104,7 @@
        "'optimal'"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.90158611, 0.45815512])"
+       "array([8.54988195e-24, 3.57422224e-24])"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,20 +261,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([0.1327, 0.1157], dtype=torch.float64),\n",
-       " tensor(0.1902, dtype=torch.float64),\n",
-       " tensor(4.4281e-46, dtype=torch.float64),\n",
+       "(tensor([0.0300, 0.0096], dtype=torch.float64),\n",
+       " tensor(0.0050, dtype=torch.float64),\n",
        " tensor(0., dtype=torch.float64),\n",
-       " tensor(1.4362e-47, dtype=torch.float64))"
+       " tensor(0., dtype=torch.float64),\n",
+       " tensor(1.0878e-49, dtype=torch.float64))"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.2369, 0.1157], dtype=torch.float64)"
+       "tensor([0.0384, 0.0096], dtype=torch.float64)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,16 +320,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-1.4049e-23, -1.5667e-23], dtype=torch.float64)"
+       "tensor([8.5499e-24, 3.5742e-24], dtype=torch.float64)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.1327, 0.1157], dtype=torch.float64)"
+       "tensor([0.0300, 0.0096], dtype=torch.float64)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1"
+       "0.11350292824288229"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,16 +380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(-1.4049e-23, dtype=torch.float64)"
+       "tensor(8.5499e-24, dtype=torch.float64)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,16 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.8474, dtype=torch.float64)"
+       "tensor(0.4159, dtype=torch.float64)"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1839191964333159"
+       "0.3356259775174736"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
